--- a/_posts/2024-04-01-SECCDC-2024.md
+++ b/_posts/2024-04-01-SECCDC-2024.md
@@ -24,6 +24,6 @@ Whether it was the last-minute strategy sessions, the jokes to lighten the mood,
 No competition is without its surprises, and SECCDC 2024 was no exception. We encountered unexpected challenges that tested our resilience and adaptability. From sudden network outages to complex attack vectors we hadn’t anticipated, there was never a dull moment. But each challenge was a learning opportunity, pushing us to think on our feet and come up with creative solutions.
 
 # Conclusion: A Rewarding Experience
-Placing third at SECCDC 2024 is something I’m incredibly proud of, but the real reward was the experience itself. The competition was a perfect blend of chaos, learning, and fun. It tested our skills, strengthened our teamwork, and left us with memories that will last a lifetime.
+Placing second at SECCDC 2024 is something I’m incredibly proud of, but the real reward was the experience itself. The competition was a perfect blend of chaos, learning, and fun. It tested our skills, strengthened our teamwork, and left us with memories that will last a lifetime.
 
 By far, my favorite part was getting to spend invaluable time with my friends—Nev, Jacob, Brandon, Waseem, Cameron, and Logan. The bonds we forged and the memories we created are something I’ll never forget. As we look ahead to future competitions, I know that the lessons we learned and the connections we deepened at SECCDC 2024 will stay with us, guiding us through whatever challenges lie ahead. Here’s to more chaotic, challenging, and unforgettable experiences in the world of cybersecurity!
